--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.18",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -37,10 +38,14 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.11",
+    "@types/express-handlebars": "^3.1.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql2": "github:types/mysql2",
+    "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.6",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.6",
