--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/autocannon": "^4.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
