--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
-    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.18",
     "passport": "^0.4.1",
@@ -41,10 +40,10 @@
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.11",
     "@types/express-handlebars": "^3.1.0",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/express-session": "^1.17.3",
+    "@types/morgan": "^1.9.2",
     "@types/mysql2": "github:types/mysql2",
     "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.6",
@@ -53,6 +52,7 @@
     "autocannon": "^7.0.3",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
