--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "mysql2": "^2.2.5",
@@ -42,6 +43,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/express-handlebars": "^3.1.0",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/express-session": "^1.17.3",
     "@types/morgan": "^1.9.2",
     "@types/mysql2": "github:types/mysql2",
