--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/autocannon": "^4.1.0",
